@@ -20,9 +20,9 @@ import cmd
 
 def extract(s):
     return [[ 2, 'Extract', '' ],
-            [ 1, 'object', 'cmd.create(None,"'+s+'",extract="'+s+'")' ],
-            [ 1, 'extend 1', 'cmd.create(None,"('+s+') extend 1",extract="'+s+'")' ],
-            [ 1, 'byres extend 1', 'cmd.create(None,"byres (('+s+') extend 1)",extract="'+s+'")' ],            
+            [ 1, 'object', 'cmd.create(None,"'+s+'",extract="'+s+'",zoom=0)' ],
+            [ 1, 'extend 1', 'cmd.create(None,"('+s+') extend 1",extract="'+s+'",zoom=0)' ],
+            [ 1, 'byres extend 1', 'cmd.create(None,"byres (('+s+') extend 1)",extract="'+s+'",zoom=0)' ],            
             ]
             
 def all_motion(s):
@@ -872,8 +872,8 @@ def sele_action(s):
               [ 1, 'remove atoms'   ,'cmd.remove("'+s+'");cmd.delete("'+s+'")'          ],
               [ 0, ''          ,''                                              ],
               [ 1, 'duplicate'      ,'cmd.select(None,"'+s+'")'          ], # broken...
-              [ 1, 'copy to object' ,'cmd.create(None,"'+s+'")'     ],
-              [ 1, 'extract object' ,'cmd.extract(None,"'+s+'")' ],
+              [ 1, 'copy to object' ,'cmd.create(None,"'+s+'",zoom=0)'     ],
+              [ 1, 'extract object' ,'cmd.extract(None,"'+s+'",zoom=0)' ],
               [ 0, ''          ,''                                  ],
               [ 1, 'masking'        , masking(s)         ],
               [ 1, 'movement'       , movement(s)         ],
@@ -898,8 +898,8 @@ def sele_action2(s):
               [ 1, 'complete'       , complete(s)         ],
               [ 0, ''          ,''                                              ],
               [ 1, 'duplicate selection'      ,'cmd.select(None,"'+s+'")'          ],
-              [ 1, 'copy to object'  ,'cmd.create(None,"'+s+'")'     ],           
-              [ 1, 'extract object' ,'cmd.extract(None,"'+s+'")' ],
+              [ 1, 'copy to object'  ,'cmd.create(None,"'+s+'",zoom=0)'     ],           
+              [ 1, 'extract object' ,'cmd.extract(None,"'+s+'",zoom=0)' ],
             [ 0, ''          ,''                                  ],
               [ 1, 'masking'      , masking(s)         ],
               [ 1, 'movement'       , movement(s)         ],
@@ -1233,8 +1233,8 @@ def pick_sele_sub(s):
         [ 1, 'rename', 'cmd.wizard("renaming","'+s+'")'          ],
         [ 1, 'clear'    , 'cmd.select("'+s+'","none")' ],
         [ 1, 'delete selection', 'cmd.delete("'+s+'")' ],
-        [ 1, 'copy to object','cmd.create(None,"'+s+'")'            ],
-        [ 1, 'extract object' ,'cmd.extract(None,"'+s+'")' ],
+        [ 1, 'copy to object','cmd.create(None,"'+s+'",zoom=0)'            ],
+        [ 1, 'extract object' ,'cmd.extract(None,"'+s+'",zoom=0)' ],
         [ 1, 'remove atoms'  , 'cmd.remove("'+s+'")' ],     
         ]
     return result
@@ -1293,8 +1293,8 @@ def pick_option(title,s,object=0):
         result.extend([
             [ 1, 'remove atoms' , 'cmd.remove("'+s+'")' ],     
             [ 0, ''             , ''                      ],      
-            [ 1, 'copy to object','cmd.create(None,"'+s+'")'            ],
-            [ 1, 'extract object' ,'cmd.extract(None,"'+s+'")' ],
+            [ 1, 'copy to object','cmd.create(None,"'+s+'",zoom=0)'            ],
+            [ 1, 'extract object' ,'cmd.extract(None,"'+s+'",zoom=0)' ],
             ])
     return result
 
@@ -1370,8 +1370,8 @@ def seq_option(title,s,object=0):
     else:
         result.extend([
         [ 0, ''             , ''                      ],      
-        [ 1, 'create object','cmd.create(None,"'+s+'")'            ],
-        [ 1, 'extract object' ,'cmd.extract(None,"'+s+'")' ],
+        [ 1, 'create object','cmd.create(None,"'+s+'",zoom=0)'            ],
+        [ 1, 'extract object' ,'cmd.extract(None,"'+s+'",zoom=0)' ],
         [ 0, ''             , ''                      ],
         [ 1, 'remove atoms' , 'cmd.remove("'+s+'")' ],     
                           ])
